added the remaining form pages, finished styling home page, added thank-you page

--- a/friends.html
+++ b/friends.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Alumni</title>
+<title>Friends</title>
 <head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
@@ -13,32 +13,32 @@
 </head>
 
 <body>
-	<h1 class="form-title">Alumni</h1>
+	<h1 class="form-title">Friends of Dartmouth</h1>
 	<form>
-		<input type="hidden" name="form-type" value="alumni">
+		<input type="hidden" name="form-type" value="friend">
 		<p>Name:</p>
 			<label>
 				<input type="text" class="form-control name" id="alumniNameFirst" placeholder="First">
 				<input type="text" class="form-control name" id="alumniNameLAst" placeholder="Last">
 				
 			</label>
-		<span><br>When I think of my days at Dartmouth, I dream of being back in this special place that inspired me to</span>
-		<label for="alumniVerbPhrase1"></label><input type="text" class="form-control custom" id="alumniVerbPhrase1" placeholder="verb/verb phrase">
-		<span>. I recall </span>
-		<label for="alumniFacultyMember2"></label>
-		<input type="text" class="form-control" id="alumniFacultyMember2" placeholder="faculty member">
-		<span>, who taught me</span>
-		<label for="alumniPhraseNoun3"></label>
-		<input type="text" class="form-control" id="alumniPhraseNoun3" placeholder="phrase/noun">
-		<span>. I dream of</span>
-		<label for="alumniPlaceActivity4"></label>
-		<input type="text" class="form-control" id="alumniPlaceActivity4" placeholder="place/activity">
-		<span>where a love of</span>
-		<label for="alumniNounVerb5"></label>
-		<input type="text" class="form-control" id="alumniNounVerb5" placeholder="noun/verb">
-		<span>was born. And above all else, I reflect on the one simple lesson that has propelled me through this complex world:</span>
-		<label for="alumniPhrase6"></label>
-		<input type="text" class="form-control" id="alumniPhrase6" placeholder="phrase">
+		<span><br>My love for Dartmouth happened when</span>
+		<label for="friendOccasion1"></label><input type="text" class="form-control" id="friendOccasion1" placeholder="occasion/reason">
+		<span>. The </span>
+		<label for="friendNounSubjectActvityQuality2"></label>
+		<input type="text" class="form-control quality" id="friendNounSubjectActvityQuality2" placeholder="noun/subj/activity/quality">
+		<span> and </span>
+		<label for="friendNounSubjectActvityQuality3"></label>
+		<input type="text" class="form-control quality" id="friendNounSubjectActvityQuality3" placeholder="noun/subj/activity/quality">
+		<span> here has made as big a fan as any alumnus or parent.</span>
+		<label for="friendPerson4"></label>
+		<input type="text" class="form-control" id="friendPerson4" placeholder="Person">
+		<span> is someone I have tremendous admiration for, and </span>
+		<label for="friendAttributeQuality5"></label>
+		<input type="text" class="form-control quality" id="friendAttributeQuality5" placeholder="attribute,quality">
+		<span>is something I wish we had more of in this world. Whenever I think of Dartmouth, I feel </span>
+		<label for="friendAdjectivePhrase6"></label>
+		<input type="text" class="form-control" id="friendAdjectivePhrase6" placeholder="adjective/phrase">
 		<span>.</span>
 		<button type="submit" class="btn btn-primary">Submit</button>
 	</form>
