--- a/thank-you.html
+++ b/thank-you.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>My Dartmouth Story</title>
-
+<title>Thank You</title>
 <head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
@@ -14,47 +13,7 @@
 </head>
 
 <body>
-	<div class="site-wrap">
-		<div class="container homepage-wrap">
-			<h1>My Dartmouth Story</h1>
-			<h2>I'm here as a/an:</h2>
-			<div class="row justify-content-around">
-				<div class="col col-md-4">
-					<a href="/alumni-form.html">
-						<div class="homepage-block top">
-							<img src="images/pushpin-1.png" class="pin-top-left" alt="red pushpin">
-							<h3>Alumni</h3>
-						</div>
-					</a>
-				</div>
-				<div class="col col-md-4">
-					<a href="parent-form.html">
-						<div class="homepage-block top">
-							<h3>Parent</h3>
-						</div>
-					</a>
-				</div>
-			</div>
-			<div class="row justify-content-around">
-				<div class="col col-md-4">
-					<a href="spouse.html">
-						<div class="homepage-block bottom">
-							<h3>Spouse/<br>Significant Other</h3>
-						</div>
-					</a>
-				</div>
-				<div class="col col-md-4">
-					<a href="friends.html">
-						<div class="homepage-block bottom">
-							<img src="images/black-pen-2.png" class="pen-bottom-right" alt="black pen">
-							<h3>Friend of Dartmouth</h3>
-						</div>
-					</a>
-				</div>
-			</div>
-		</div>
-	</div>
-
+	<h1 class="thank-you-title">Thank You</h1>
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
