--- a/parent-form.html
+++ b/parent-form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Alumni</title>
+<title>Parent</title>
 <head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
@@ -13,32 +13,32 @@
 </head>
 
 <body>
-	<h1 class="form-title">Alumni</h1>
+	<h1 class="form-title">Parent</h1>
 	<form>
-		<input type="hidden" name="form-type" value="alumni">
+		<input type="hidden" name="form-type" value="parent">
 		<p>Name:</p>
 			<label>
 				<input type="text" class="form-control name" id="alumniNameFirst" placeholder="First">
 				<input type="text" class="form-control name" id="alumniNameLAst" placeholder="Last">
 				
 			</label>
-		<span><br>When I think of my days at Dartmouth, I dream of being back in this special place that inspired me to</span>
-		<label for="alumniVerbPhrase1"></label><input type="text" class="form-control custom" id="alumniVerbPhrase1" placeholder="verb/verb phrase">
-		<span>. I recall </span>
-		<label for="alumniFacultyMember2"></label>
-		<input type="text" class="form-control" id="alumniFacultyMember2" placeholder="faculty member">
-		<span>, who taught me</span>
-		<label for="alumniPhraseNoun3"></label>
-		<input type="text" class="form-control" id="alumniPhraseNoun3" placeholder="phrase/noun">
-		<span>. I dream of</span>
-		<label for="alumniPlaceActivity4"></label>
-		<input type="text" class="form-control" id="alumniPlaceActivity4" placeholder="place/activity">
-		<span>where a love of</span>
-		<label for="alumniNounVerb5"></label>
-		<input type="text" class="form-control" id="alumniNounVerb5" placeholder="noun/verb">
-		<span>was born. And above all else, I reflect on the one simple lesson that has propelled me through this complex world:</span>
-		<label for="alumniPhrase6"></label>
-		<input type="text" class="form-control" id="alumniPhrase6" placeholder="phrase">
+		<span><br>When I set foot on Dartmouth for the first time, I knew this was the right place for my son or daughter because of its </span>
+		<label for="parentAttributeQuality1"></label><input type="text" class="form-control" id="parentAttributeQuality1" placeholder="attribute/quality">
+		<span>. Here, they fell in love with </span>
+		<label for="parentSubjectNounIdea2"></label>
+		<input type="text" class="form-control" id="parentSubjectNounIdea2" placeholder="subject/noun/idea">
+		<span> and experienced</span>
+		<label for="parentPhrase3"></label>
+		<input type="text" class="form-control" id="parentPhrase3" placeholder="phrase">
+		<span> for the first time.  Their time at Dartmouth opened their eyes to </span>
+		<label for="parentSubjectNounIdea4"></label>
+		<input type="text" class="form-control" id="parentSubjectNounIdea4" placeholder="subject/noun/idea">
+		<span>, and they often spoke of</span>
+		<label for="parentFacultyMentor"></label>
+		<input type="text" class="form-control faculty-member" id="parentFacultyMentor5" placeholder="faculty member/mentor">
+		<span>, who had a major impact on them while they were here.  Dartmouth helped them become</span>
+		<label for="parentAdjectivePhrase6"></label>
+		<input type="text" class="form-control" id="parentAdjectivePhrase6" placeholder="adjective/phrase">
 		<span>.</span>
 		<button type="submit" class="btn btn-primary">Submit</button>
 	</form>
