--- a/spouse.html
+++ b/spouse.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Alumni</title>
+<title>Spouse / Significant Other</title>
 <head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
@@ -13,32 +13,32 @@
 </head>
 
 <body>
-	<h1 class="form-title">Alumni</h1>
+	<h1 class="form-title">Spouse / Significant Other</h1>
 	<form>
-		<input type="hidden" name="form-type" value="alumni">
+		<input type="hidden" name="form-type" value="spouse">
 		<p>Name:</p>
 			<label>
 				<input type="text" class="form-control name" id="alumniNameFirst" placeholder="First">
 				<input type="text" class="form-control name" id="alumniNameLAst" placeholder="Last">
 				
 			</label>
-		<span><br>When I think of my days at Dartmouth, I dream of being back in this special place that inspired me to</span>
-		<label for="alumniVerbPhrase1"></label><input type="text" class="form-control custom" id="alumniVerbPhrase1" placeholder="verb/verb phrase">
-		<span>. I recall </span>
-		<label for="alumniFacultyMember2"></label>
-		<input type="text" class="form-control" id="alumniFacultyMember2" placeholder="faculty member">
-		<span>, who taught me</span>
-		<label for="alumniPhraseNoun3"></label>
-		<input type="text" class="form-control" id="alumniPhraseNoun3" placeholder="phrase/noun">
-		<span>. I dream of</span>
-		<label for="alumniPlaceActivity4"></label>
-		<input type="text" class="form-control" id="alumniPlaceActivity4" placeholder="place/activity">
-		<span>where a love of</span>
-		<label for="alumniNounVerb5"></label>
-		<input type="text" class="form-control" id="alumniNounVerb5" placeholder="noun/verb">
-		<span>was born. And above all else, I reflect on the one simple lesson that has propelled me through this complex world:</span>
-		<label for="alumniPhrase6"></label>
-		<input type="text" class="form-control" id="alumniPhrase6" placeholder="phrase">
+		<span><br>Whenever</span>
+		<label for="spouseSOname1"></label><input type="text" class="form-control" id="spouseSOname1" placeholder="spouse/SO name">
+		<span> talks about Dartmouth, the first thing they talk about is</span>
+		<label for="spouseNoun2"></label>
+		<input type="text" class="form-control" id="spouseNoun2" placeholder="noun">
+		<span>.  When I came to Dartmouth for the first time, the thing that struck me most was</span>
+		<label for="spouseNounAttributeQuality3"></label>
+		<input type="text" class="form-control" id="spouseNounAttributeQuality3" placeholder="noun/attribute/quality">
+		<span>. What I notice most about the Dartmouth friends I've met is </span>
+		<label for="spouseAdjectiveAttributeQuality4"></label>
+		<input type="text" class="form-control quality" id="spouseAdjectiveAttributeQuality4" placeholder="adjective,attribute,quality">
+		<span>, and what I've grown to appreciate about Dartmouth is </span>
+		<label for="spouseAdjectiveAttributeQuality5"></label>
+		<input type="text" class="form-control quality" id="spouseAdjectiveAttributeQuality5" placeholder="adjective,attribute,quality">
+		<span>. I feel like Dartmouth made them who they are today by</span>
+		<label for="spousePhrase6"></label>
+		<input type="text" class="form-control" id="spousePhrase6" placeholder="phrase">
 		<span>.</span>
 		<button type="submit" class="btn btn-primary">Submit</button>
 	</form>
