changed layout at clients request and removed the "friends" module

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles/styles.css" type="text/css">
-	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
 </head>
 
 <body>
@@ -21,21 +21,21 @@
 			<div class="row justify-content-around">
 				<div class="col col-md-4">
 					<a href="/alumni-form.html">
-						<div class="homepage-block top">
+						<div class="homepage-block alumni">
 							<img src="images/pushpin-1.png" class="pin-top-left" alt="red pushpin">
 							<h3>Alumni</h3>
 						</div>
 					</a>
 				</div>
+			</div>
+			<div class="row justify-content-around">
 				<div class="col col-md-4">
 					<a href="parent-form.html">
-						<div class="homepage-block top">
+						<div class="homepage-block bottom">
 							<h3>Parent</h3>
 						</div>
 					</a>
 				</div>
-			</div>
-			<div class="row justify-content-around">
 				<div class="col col-md-4">
 					<a href="spouse.html">
 						<div class="homepage-block bottom">
@@ -43,23 +43,14 @@
 						</div>
 					</a>
 				</div>
-				<div class="col col-md-4">
-					<a href="friends.html">
-						<div class="homepage-block bottom">
-							<img src="images/black-pen-2.png" class="pen-bottom-right" alt="black pen">
-							<h3>Friend of Dartmouth</h3>
-						</div>
-					</a>
-				</div>
 			</div>
 		</div>
 	</div>
-
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+		<!-- Optional JavaScript -->
+		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </body>
 
 </html>
