updated the three forms with new IDs, inputs, and content

--- a/spouse.html
+++ b/spouse.html
@@ -23,22 +23,19 @@
 				
 			</label>
 		<span><br>Whenever</span>
-		<label for="spouseSOname1"></label><input type="text" class="form-control" id="spouseSOname1" placeholder="spouse/SO name">
-		<span> talks about Dartmouth, the first thing they talk about is</span>
-		<label for="spouseNoun2"></label>
-		<input type="text" class="form-control" id="spouseNoun2" placeholder="noun">
-		<span>.  When I came to Dartmouth for the first time, the thing that struck me most was</span>
-		<label for="spouseNounAttributeQuality3"></label>
-		<input type="text" class="form-control" id="spouseNounAttributeQuality3" placeholder="noun/attribute/quality">
-		<span>. What I notice most about the Dartmouth friends I've met is </span>
-		<label for="spouseAdjectiveAttributeQuality4"></label>
-		<input type="text" class="form-control quality" id="spouseAdjectiveAttributeQuality4" placeholder="adjective,attribute,quality">
-		<span>, and what I've grown to appreciate about Dartmouth is </span>
-		<label for="spouseAdjectiveAttributeQuality5"></label>
-		<input type="text" class="form-control quality" id="spouseAdjectiveAttributeQuality5" placeholder="adjective,attribute,quality">
-		<span>. I feel like Dartmouth made them who they are today by</span>
-		<label for="spousePhrase6"></label>
-		<input type="text" class="form-control" id="spousePhrase6" placeholder="phrase">
+		<label for="spouseResponse1"></label><input type="text" class="form-control" id="spouseResponse1" placeholder="spouse/SO name">
+		<span> talks about Dartmouth, the first thing</span>
+		<label for="spouseResponse2"></label>
+		<input type="text" class="form-control" id="spouseResponse2" placeholder="he/she">
+		<span>talks about is</span>
+		<label for="spouseResponse3"></label>
+		<input type="text" class="form-control" id="spouseResponse3" placeholder="phrase">
+		<span>. When <em>I</em> came to Dartmouth for the first time, the thing that struck me most was</span>
+		<label for="spouseResponse4"></label>
+		<input type="text" class="form-control long" id="spouseResponse4" placeholder="noun,attribute,quality">
+		<span>. What I’ve grown to appreciate about Dartmouth is</span>
+		<label for="spouseResponse5"></label>
+		<input type="text" class="form-control long" id="spouseResponse5" placeholder="adjective,attribute,quality">
 		<span>.</span>
 		<button type="submit" class="btn btn-primary">Submit</button>
 	</form>
