--- a/alumni-form.html
+++ b/alumni-form.html
@@ -22,24 +22,30 @@
 				<input type="text" class="form-control name" id="alumniNameLAst" placeholder="Last">
 				
 			</label>
-		<span><br>When I think of my days at Dartmouth, I dream of being back in this special place that inspired me to</span>
-		<label for="alumniVerbPhrase1"></label><input type="text" class="form-control custom" id="alumniVerbPhrase1" placeholder="verb/verb phrase">
-		<span>. I recall </span>
-		<label for="alumniFacultyMember2"></label>
-		<input type="text" class="form-control" id="alumniFacultyMember2" placeholder="faculty member">
+		<span><br>When I see the Dartmouth Green, it always reminds me of</span>
+		<label for="alumniResponse1"></label><input type="text" class="form-control long" id="alumniResponse1" placeholder="great Dartmouth experience">
+		<span>. I remember </span>
+		<label for="alumniResponse2"></label>
+		<input type="text" class="form-control long" id="alumniResponse2" placeholder="faculty member/classmate/coach">
 		<span>, who taught me</span>
-		<label for="alumniPhraseNoun3"></label>
-		<input type="text" class="form-control" id="alumniPhraseNoun3" placeholder="phrase/noun">
-		<span>. I dream of</span>
-		<label for="alumniPlaceActivity4"></label>
-		<input type="text" class="form-control" id="alumniPlaceActivity4" placeholder="place/activity">
-		<span>where a love of</span>
-		<label for="alumniNounVerb5"></label>
-		<input type="text" class="form-control" id="alumniNounVerb5" placeholder="noun/verb">
-		<span>was born. And above all else, I reflect on the one simple lesson that has propelled me through this complex world:</span>
-		<label for="alumniPhrase6"></label>
-		<input type="text" class="form-control" id="alumniPhrase6" placeholder="phrase">
-		<span>.</span>
+		<label for="alumniResponse3"></label>
+		<input type="text" class="form-control" id="alumniResponse3" placeholder="phrase,noun">
+		<span>, and </span>
+		<label for="alumniResponse4"></label>
+		<input type="text" class="form-control" id="alumniResponse4" placeholder="class/title">
+		<span>, which introduced me to</span>
+		<label for="alumniResponse5"></label>
+		<input type="text" class="form-control" id="alumniResponse5" placeholder="phrase">
+		<span>. I reflect on</span>
+		<label for="alumniResponse6"></label>
+		<input type="text" class="form-control long" id="alumniResponse6" placeholder="the D Plan/Study abroad/experience">
+		<span>, which led me to</span>
+		<label for="alumniResponse7"></label>
+		<input type="text" class="form-control" id="alumniResponse7" placeholder="place/activity">
+		<span>, where a lifelong interest in</span>
+		<label for="alumniResponse8"></label>
+		<input type="text" class="form-control" id="alumniResponse8" placeholder="noun/verb">
+		<span> took root.</span>
 		<button type="submit" class="btn btn-primary">Submit</button>
 	</form>
 
