--- a/parent-form.html
+++ b/parent-form.html
@@ -22,23 +22,23 @@
 				<input type="text" class="form-control name" id="alumniNameLAst" placeholder="Last">
 				
 			</label>
-		<span><br>When I set foot on Dartmouth for the first time, I knew this was the right place for my son or daughter because of its </span>
-		<label for="parentAttributeQuality1"></label><input type="text" class="form-control" id="parentAttributeQuality1" placeholder="attribute/quality">
-		<span>. Here, they fell in love with </span>
-		<label for="parentSubjectNounIdea2"></label>
-		<input type="text" class="form-control" id="parentSubjectNounIdea2" placeholder="subject/noun/idea">
-		<span> and experienced</span>
-		<label for="parentPhrase3"></label>
-		<input type="text" class="form-control" id="parentPhrase3" placeholder="phrase">
-		<span> for the first time.  Their time at Dartmouth opened their eyes to </span>
-		<label for="parentSubjectNounIdea4"></label>
-		<input type="text" class="form-control" id="parentSubjectNounIdea4" placeholder="subject/noun/idea">
-		<span>, and they often spoke of</span>
-		<label for="parentFacultyMentor"></label>
-		<input type="text" class="form-control faculty-member" id="parentFacultyMentor5" placeholder="faculty member/mentor">
-		<span>, who had a major impact on them while they were here.  Dartmouth helped them become</span>
-		<label for="parentAdjectivePhrase6"></label>
-		<input type="text" class="form-control" id="parentAdjectivePhrase6" placeholder="adjective/phrase">
+		<span><br>When I first saw Dartmouth, I was struck by its </span>
+		<label for="parentResponse1"></label><input type="text" class="form-control" id="parentResponse1" placeholder="attribute/quality">
+		<span>. Here, my student experienced </span>
+		<label for="parentResponse2"></label>
+		<input type="text" class="form-control long" id="parentResponse2" placeholder="subject/noun/idea/activity">
+		<span> for the first time and developed an interest in</span>
+		<label for="parentResponse3"></label>
+		<input type="text" class="form-control" id="parentResponse3" placeholder="phrase">
+		<span> My </span>
+		<label for="parentResponse4"></label>
+		<input type="text" class="form-control" id="parentResponse4" placeholder="son/daughter">
+		<span>often spoke of</span>
+		<label for="parentResponse5"></label>
+		<input type="text" class="form-control long" id="parentResponse5" placeholder="experience">
+		<span>, as an important influence. Dartmouth helped my student become</span>
+		<label for="parentResponse6"></label>
+		<input type="text" class="form-control" id="parentResponse6" placeholder="phrase">
 		<span>.</span>
 		<button type="submit" class="btn btn-primary">Submit</button>
 	</form>
