--- a/spouse.html
+++ b/spouse.html
@@ -23,19 +23,19 @@
 
 			</label>
 		<span><br>Whenever</span>
-		<label for="spouseResponse1"></label><input type="text" class="form-control" id="spouseResponse1" name="spouseResponse1" placeholder="spouse/SO name">
+		<label for="spouseResponse1"></label><input type="text" class="form-control" id="spouseResponse1" name="response1" placeholder="spouse/SO name">
 		<span> talks about Dartmouth, the first thing</span>
 		<label for="spouseResponse2"></label>
-		<input type="text" class="form-control" id="spouseResponse2" name="spouseResponse2" placeholder="he/she">
+		<input type="text" class="form-control" id="spouseResponse2" name="response2" placeholder="he/she">
 		<span>talks about is</span>
 		<label for="spouseResponse3"></label>
-		<input type="text" class="form-control" id="spouseResponse3" name="spouseResponse3" placeholder="phrase">
+		<input type="text" class="form-control" id="spouseResponse3" name="response3" placeholder="phrase">
 		<span>. When <em>I</em> came to Dartmouth for the first time, the thing that struck me most was</span>
 		<label for="spouseResponse4"></label>
-		<input type="text" class="form-control long" id="spouseResponse4" name="spouseResponse4" placeholder="noun,attribute,quality">
+		<input type="text" class="form-control long" id="spouseResponse4" name="response4" placeholder="noun,attribute,quality">
 		<span>. What I’ve grown to appreciate about Dartmouth is</span>
 		<label for="spouseResponse5"></label>
-		<input type="text" class="form-control long" id="spouseResponse5" name="spouseResponse5" placeholder="adjective,attribute,quality">
+		<input type="text" class="form-control long" id="spouseResponse5" name="response5" placeholder="adjective,attribute,quality">
 		<span>.</span>
 		<button type="submit" class="btn btn-primary">Submit</button>
 	</form>
