changed layout to simple 3-col. Updated font sizes and made all text inputs required

--- a/parent-form.html
+++ b/parent-form.html
@@ -18,27 +18,27 @@
 		<input type="hidden" name="form-type" value="parent">
 		<p>Name:</p>
 			<label>
-				<input type="text" class="form-control name" id="alumniNameFirst" name="NameFirst" placeholder="First">
-				<input type="text" class="form-control name" id="alumniNameLast" name="NameLast" placeholder="Last">
+				<input type="text" class="form-control name" id="parentNameFirst" name="NameFirst" placeholder="First" required>
+				<input type="text" class="form-control name" id="parentNameLast" name="NameLast" placeholder="Last" required>
 
 			</label>
 		<span><br>When I first saw Dartmouth, I was struck by its </span>
-		<label for="parentResponse1"></label><input type="text" class="form-control" id="parentResponse1" name="response1" placeholder="attribute/quality">
+		<label for="parentResponse1"></label><input type="text" class="form-control" id="parentResponse1" name="response1" placeholder="attribute/quality" required>
 		<span>. Here, my student experienced </span>
 		<label for="parentResponse2"></label>
-		<input type="text" class="form-control long" id="parentResponse2" name="response2" placeholder="subject/noun/idea/activity">
+		<input type="text" class="form-control long" id="parentResponse2" name="response2" placeholder="subject/noun/idea/activity" required>
 		<span> for the first time and developed an interest in</span>
 		<label for="parentResponse3"></label>
-		<input type="text" class="form-control" id="parentResponse3" name="response3" placeholder="phrase">
+		<input type="text" class="form-control" id="parentResponse3" name="response3" placeholder="phrase" required>
 		<span> My </span>
 		<label for="parentResponse4"></label>
-		<input type="text" class="form-control" id="parentResponse4" name="response4" placeholder="son/daughter">
+		<input type="text" class="form-control" id="parentResponse4" name="response4" placeholder="son/daughter" required>
 		<span>often spoke of</span>
 		<label for="parentResponse5"></label>
-		<input type="text" class="form-control long" id="parentResponse5" name="response5" placeholder="experience">
+		<input type="text" class="form-control long" id="parentResponse5" name="response5" placeholder="experience" required>
 		<span>, as an important influence. Dartmouth helped my student become</span>
 		<label for="parentResponse6"></label>
-		<input type="text" class="form-control" id="parentResponse6" name="response6" placeholder="phrase">
+		<input type="text" class="form-control" id="parentResponse6" name="response6" placeholder="phrase" required>
 		<span>.</span>
 		<button type="submit" class="btn btn-primary">Submit</button>
 	</form>
