--- a/spouse.html
+++ b/spouse.html
@@ -18,24 +18,24 @@
 		<input type="hidden" name="form-type" value="spouse">
 		<p>Name:</p>
 			<label>
-				<input type="text" class="form-control name" id="alumniNameFirst" name="NameFirst" placeholder="First">
-				<input type="text" class="form-control name" id="alumniNameLast" name="NameLast" placeholder="Last">
+				<input type="text" class="form-control name" id="spouseNameFirst" name="NameFirst" placeholder="First" required>
+				<input type="text" class="form-control name" id="spouseNameLast" name="NameLast" placeholder="Last" required>
 
 			</label>
 		<span><br>Whenever</span>
-		<label for="spouseResponse1"></label><input type="text" class="form-control" id="spouseResponse1" name="response1" placeholder="spouse/SO name">
+		<label for="spouseResponse1"></label><input type="text" class="form-control" id="spouseResponse1" name="response1" placeholder="spouse/SO name" required>
 		<span> talks about Dartmouth, the first thing</span>
 		<label for="spouseResponse2"></label>
-		<input type="text" class="form-control" id="spouseResponse2" name="response2" placeholder="he/she">
+		<input type="text" class="form-control" id="spouseResponse2" name="response2" placeholder="he/she" required>
 		<span>talks about is</span>
 		<label for="spouseResponse3"></label>
-		<input type="text" class="form-control" id="spouseResponse3" name="response3" placeholder="phrase">
+		<input type="text" class="form-control" id="spouseResponse3" name="response3" placeholder="phrase" required>
 		<span>. When <em>I</em> came to Dartmouth for the first time, the thing that struck me most was</span>
 		<label for="spouseResponse4"></label>
-		<input type="text" class="form-control long" id="spouseResponse4" name="response4" placeholder="noun,attribute,quality">
+		<input type="text" class="form-control long" id="spouseResponse4" name="response4" placeholder="noun,attribute,quality" required>
 		<span>. What I’ve grown to appreciate about Dartmouth is</span>
 		<label for="spouseResponse5"></label>
-		<input type="text" class="form-control long" id="spouseResponse5" name="response5" placeholder="adjective,attribute,quality">
+		<input type="text" class="form-control long" id="spouseResponse5" name="response5" placeholder="adjective,attribute,quality" required>
 		<span>.</span>
 		<button type="submit" class="btn btn-primary">Submit</button>
 	</form>
