--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
 <body>
 	<div class="site-wrap">
 		<div class="container homepage-wrap">
+			<div class="header">
+				<img src="#" alt="Dartmouth logo">
+			</div>
 			<h1>My Dartmouth Story</h1>
 			<h2>I'm here as a/an:</h2>
 			<div class="row justify-content-around">
-				<div class="col col-md-4">
+				<div class="col-12 col-md-4">
 					<a href="/alumni-form.html">
-						<div class="homepage-block alumni">
-							<img src="images/pushpin-1.png" class="pin-top-left" alt="red pushpin">
+						<div class="homepage-block">
 							<h3>Alumni</h3>
 						</div>
 					</a>
 				</div>
-			</div>
-			<div class="row justify-content-around">
-				<div class="col col-md-4">
+				<div class="col-12 col-md-4">
 					<a href="parent-form.html">
 						<div class="homepage-block bottom">
 							<h3>Parent</h3>
 						</div>
 					</a>
 				</div>
-				<div class="col col-md-4">
+				<div class="col-12 col-md-4">
 					<a href="spouse.html">
 						<div class="homepage-block bottom">
 							<h3>Spouse/<br>Significant Other</h3>
@@ -46,11 +46,11 @@
 			</div>
 		</div>
 	</div>
-		<!-- Optional JavaScript -->
-		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </body>
 
 </html>
