added header and footer sections with logos at client's request. Made style changes to accommodate.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 
 <body>
 	<div class="site-wrap">
-		<div class="container homepage-wrap">
+		<div class="container-fluid homepage-wrap">
 			<div class="header">
-				<img src="#" alt="Dartmouth logo">
+				<img src="images/w-logo1.png" alt="Dartmouth logo" class="logo">
 			</div>
+			<div class="content-wrap">
 			<h1>My Dartmouth Story</h1>
 			<h2>I'm here as a/an:</h2>
 			<div class="row justify-content-around">
@@ -43,6 +44,11 @@
 						</div>
 					</a>
 				</div>
+			</div>
+			</div>
+			<!-- Footer -->
+			<div class="footer">
+				<img class="wordmark" src="images/w-wordmark-1.png" alt="Dartmouth Wordmark">
 			</div>
 		</div>
 	</div>
