Change form ID to number instead of text

--- a/alumni-form.html
+++ b/alumni-form.html
@@ -15,7 +15,7 @@
 <body>
 	<h1 class="form-title">Alumni</h1>
 	<form action="submit/submit.php" method="POST">
-		<input type="hidden" name="form-type" value="alumni">
+		<input type="hidden" name="form-type" value="1">
 		<p>Name:</p>
 			<label>
 				<input type="text" class="form-control name" id="alumniNameFirst" name="NameFirst" placeholder="First" required>
