--- a/parent-form.html
+++ b/parent-form.html
@@ -15,7 +15,7 @@
 <body>
 	<h1 class="form-title">Parent</h1>
 	<form action="submit/submit.php" method="POST">
-		<input type="hidden" name="form-type" value="parent">
+		<input type="hidden" name="form-type" value="2">
 		<p>Name:</p>
 			<label>
 				<input type="text" class="form-control name" id="parentNameFirst" name="NameFirst" placeholder="First" required>
