--- a/spouse.html
+++ b/spouse.html
@@ -15,7 +15,7 @@
 <body>
 	<h1 class="form-title">Spouse / Significant Other</h1>
 	<form action="submit/submit.php" method="POST">
-		<input type="hidden" name="form-type" value="spouse">
+		<input type="hidden" name="form-type" value="3">
 		<p>Name:</p>
 			<label>
 				<input type="text" class="form-control name" id="spouseNameFirst" name="NameFirst" placeholder="First" required>
