--- a/alumni-form.html
+++ b/alumni-form.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <title>Alumni</title>
+
 <head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
@@ -13,17 +14,21 @@
 </head>
 
 <body>
+	<div class="header">
+		<img src="images/w-logo1.png" alt="Dartmouth logo" class="logo">
+	</div>
 	<h1 class="form-title">Alumni</h1>
 	<form action="submit/submit.php" method="POST">
 		<input type="hidden" name="form-type" value="1">
-		<p>Name:</p>
-			<label>
-				<input type="text" class="form-control name" id="alumniNameFirst" name="NameFirst" placeholder="First" required>
-				<input type="text" class="form-control name" id="alumniNameLast" name="NameLast" placeholder="Last" required>
+		<span>Name:</span>
+		<label>
+			<input type="text" class="form-control name" id="alumniNameFirst" name="NameFirst" placeholder="First" required>
+			<input type="text" class="form-control name" id="alumniNameLast" name="NameLast" placeholder="Last" required>
 
-			</label>
+		</label>
 		<span><br>When I see the Dartmouth Green, it always reminds me of</span>
-		<label for="alumniResponse1"></label><input type="text" class="form-control long" name="response1" id="alumniResponse1" placeholder="great Dartmouth experience" required>
+		<label for="alumniResponse1"></label>
+		<input type="text" class="form-control long" name="response1" id="alumniResponse1" placeholder="great Dartmouth experience" required>
 		<span>. I remember </span>
 		<label for="alumniResponse2"></label>
 		<input type="text" class="form-control long" id="alumniResponse2" name="response2" placeholder="faculty member/classmate/coach" required>
