--- a/parent-form.html
+++ b/parent-form.html
@@ -13,10 +13,13 @@
 </head>
 
 <body>
+	<div class="header">
+				<img src="images/w-logo1.png" alt="Dartmouth logo" class="logo">
+			</div>
 	<h1 class="form-title">Parent</h1>
 	<form action="submit/submit.php" method="POST">
 		<input type="hidden" name="form-type" value="2">
-		<p>Name:</p>
+		<span>Name:</span>
 			<label>
 				<input type="text" class="form-control name" id="parentNameFirst" name="NameFirst" placeholder="First" required>
 				<input type="text" class="form-control name" id="parentNameLast" name="NameLast" placeholder="Last" required>
